--- a/Modules/multiManager/documentation/documentation.adoc
+++ b/Modules/multiManager/documentation/documentation.adoc
@@ -95,8 +95,22 @@ Result {
 
 We gonna invest from our baseAddress, because it is not possible yet to invest via a MSWwallet. Needs to be developed first.
 
-Before you run the same command as before send via metamask to '0xd0A1E359811322d97991E03f863a0C30C2cF029C' 1 Ether. This is the WETH contract and by default it will deposit you 1 WETH. After successfull confirmation use these commands/this file:
+Before you run the same command as before send via metamask to '0xd0A1E359811322d97991E03f863a0C30C2cF029C' 1 Ether. This is the WETH contract and by default it will deposit you 1 WETH. After successfull confirmation use these commands/this file: https://github.com/Midas-Technologies-AG/MelonApp/blob/3bc07153ed19c2173d891a1428fe5a7b80a5de6a/Modules/multiManager/runPoC.js
 
 
-== Proof of Concept
+== makeOrderMSW
+
+[pic6.png]
+1. run line 72 with any asset accepted and a tokenamount u want to buy
+
+
+
+== takeOrderMSW
+
+
+
+
+== cancelOrderMSW
+
+
 
